# HousePricesModel

./: Kaggle-HousePrices.ipynb  README.md  pyproject.toml  submission.csv
