[tool.poetry]
name = "housepricesmodel"
version = "0.1.0"
description = ""
authors = ["Blanca Alfaro <balfaro@diagrams-technologies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
