[tool.poetry]
name = "housepricesmodel"
version = "0.1.0"
description = ""
authors = ["Blanca Alfaro <balfaro@diagrams-technologies.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
scikit-learn = "^1.2.2"
eli5 = "^0.13.0"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
